// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`démarre la partie 1`] = `
Object {
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "touches": Object {
        "15": 0,
        "16": 0,
        "17": 0,
        "18": 0,
        "19": 0,
        "20": 0,
        "B": 0,
        "D": 0,
        "T": 0,
      },
    },
    Object {
      "joueur": "J2",
      "touches": Object {
        "15": 0,
        "16": 0,
        "17": 0,
        "18": 0,
        "19": 0,
        "20": 0,
        "B": 0,
        "D": 0,
        "T": 0,
      },
    },
  ],
}
`;

exports[`inscrit un joueur 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
  "lanceur": undefined,
  "phase": "INSCRIPTION",
  "scores": Array [],
}
`;

exports[`retourne le state initial 1`] = `
Object {
  "joueurs": Array [],
  "lanceur": undefined,
  "phase": "INSCRIPTION",
  "scores": Array [],
}
`;
